Hiệu chỉnh đơn hàng và xây dựng chức năng mượn trả